# quicksortpy

./: README.md  pyproject.toml
quicksortpy/: __init__.py  quick_sort.py
quicksortpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
